2006-10-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/buoh-ui.xml:
	* src/buoh-view-comic.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.c:

	Implement best fit and fit width zoom modes. Fit width is now the mode
	by default.

2006-09-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/buoh.desktop.in: 

	s/Terminal=true/Terminal=false/ I don't know why I wrote true there. 

2006-09-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* INSTALL: Removed, it's a generated file
	* configure.in: Don't use deprecated AM init macro
	* src/buoh-comic-loader.c: Remove stupid debug message
	* data/Makefile.am:
	* data/buoh.desktop.in:
	* data/icons/Makefile.am:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/buoh.png:
	* data/icons/64x64/Makefile.am:
	* data/icons/64x64/buoh.png:
	* src/buoh-view-message.c:
	* src/buoh-view.c:
	* src/buoh-window.c:
	* src/main.c:

	Install icons acording to the icon theme specification.

2006-09-24  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh.c:
	* src/buoh-view-comic.c:
	* src/buoh-comic-loader.[ch]:
	
	Rework comic loader in order to make the process simpler and faster. 

	* src/buoh-comic-manager.[ch]:
	* src/buoh-comic.[ch]:
	* src/buoh-properties-dialog.c:
	* src/buoh-window.c:

	Constify some strings so that we avoid some allocs/deallocs. Some
	other minor fixes and cleanups. 

2005-12-16  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: Added a couple of new comics.
	
	* src/buoh-comic-manager-date.[ch]: Added offset atribute.

	* src/buoh.c: Read and set the offset atribute of the comics.

2005-11-29  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: Added Nichtlustig, a german comic. Solves #1406
	
2005-11-29  Esteban Sanchez  <esteban@steve-o.org>

	* configure.in, NEWS: Version 0.8.1

2005-11-29  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: Twelve new comics added. Some updated and some
	renamed.
	
2005-12-01  Carlos Garcia Campos  <carlosgc@gnome.org>
